--- a/Road to Recovery/pages/manageRidePats.html
+++ b/Road to Recovery/pages/manageRidePats.html
@@ -1368,6 +1368,8 @@
                                 }
                             },
                             { targets: 8, className: 'text-left-strong' },
+                            { targets: [10], visible: false },
+
                         ],
                     });
 
@@ -1394,6 +1396,8 @@
                                 { targets: 0, type: 'de_date' },
                                 { targets: 1, type: 'de_time' },
                                 { targets: 8, className: 'text-left-strong' },
+                                { targets: [10], visible: false },
+
                             ],
 
 
