--- a/Road to Recovery/pages/viewRidePats.html
+++ b/Road to Recovery/pages/viewRidePats.html
@@ -576,9 +576,7 @@
 
         const MarkAsRemoved_FewRidePats = () => {
 
-            let txt2post = `האם אתם בטוחים?
-                                                                                        האם למחוק את כל ${ridePatNums2MarkDeleted.length} ההסעות שנבחרו ברשימה המוצגת לפניך?
-                                                                                        `;
+            let txt2post = `האם אתם בטוחים? האם למחוק את כל ${ridePatNums2MarkDeleted.length} ההסעות שנבחרו ברשימה המוצגת לפניך?`;
             swal({
                 title: "האם אתם בטוחים?",
                 text: txt2post,
