--- a/Road to Recovery/pages/viewRidePats.html
+++ b/Road to Recovery/pages/viewRidePats.html
@@ -626,9 +626,7 @@
 
         const Recover_FewRidePats = () => {
 
-            let txt2post = `האם אתם בטוחים?
-                                                                                        האם למחוק את כל ${ridePatNums2MarkRecovered.length} ההסעות שנבחרו ברשימה המוצגת לפניך?
-                                                                                        `;
+            let txt2post = `האם אתם בטוחים? האם למחוק את כל ${ridePatNums2MarkRecovered.length} ההסעות שנבחרו ברשימה המוצגת לפניך?`;
             swal({
                 title: "האם אתם בטוחים?",
                 text: txt2post,
